# ig-client

./: Cargo.toml  README.md  README.tpl
.github/workflows/: semver.yml
Data/: market_details.json  market_search_Daily_Germany_40.json  market_search_Germany_40.json  market_table.json
benches/: bench.rs
examples/: account_lightstreamer.rs  account_switch_example.rs  activity_debug.rs  activity_example.rs  chart_lightstreamer.rs  lightstreamer_example.rs  market_hierarchy.rs  market_lightstreamer.rs  price_lightstreamer.rs  rest_auth_example.rs  trade_lightstreamer.rs  transactions_example.rs  tx_loop.rs  websocket_example.rs  workingorders_example.rs
examples/account/: Cargo.toml
examples/chart/: Cargo.toml
examples/market/: Cargo.toml
examples/market/Data/: market_summary.json
examples/orders/: Cargo.toml
examples/positions/: Cargo.toml
examples/prices/: Cargo.toml
examples/rate_limiter/: Cargo.toml
examples/trade/: Cargo.toml
examples/transactions/: Cargo.toml
src/: config.rs  constants.rs  error.rs  lib.rs
src/application/: mod.rs
src/application/models/: account.rs  market.rs  mod.rs  order.rs  transaction.rs  working_order.rs  working_order_tests.rs
src/application/services/: account_listener.rs  account_service.rs  chart_listener.rs  ig_tx_client.rs  listener.rs  market_listener.rs  market_service.rs  mod.rs  order_service.rs  price_listener.rs  trade_listener.rs  types.rs
src/presentation/: account.rs  chart.rs  instrument.rs  market.rs  mod.rs  price.rs  serialization.rs  trade.rs
src/session/: auth.rs  interface.rs  mod.rs  response.rs
src/storage/: config.rs  mod.rs  utils.rs
src/transport/: http_client.rs  lightstreamer_client.rs  lightstreamer_interface.rs  mod.rs  websocket_client.rs
src/utils/: display.rs  finance.rs  logger.rs  market_parser.rs  mod.rs  parsing.rs  rate_limiter.rs  tools.rs  transactions.rs
tests/integration/: account_tests.rs  auth_tests.rs  common.rs  main.rs  market_tests.rs  order_tests.rs  position_tests.rs  rate_limiter_tests.rs  working_order_tests.rs
tests/unit/: auth_tests.rs  chart_listener_tests.rs  config.rs  config_tests.rs  error.rs  error_tests.rs  finance_tests.rs  http_client_tests.rs  market_listener_tests.rs  market_service_tests.rs  mod.rs  order_service_tests.rs  parsing_tests.rs  storage_utils_tests.rs  transactions_tests.rs
tests/unit/presentation/: market_tests.rs  mod.rs  serialization_tests.rs  trade_tests.rs
(+33 files in other folders)
