[package]
name = "ig-client"
version = "0.1.6"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "This crate provides a client for the IG Markets API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/ig-client"
homepage = "https://github.com/joaquinbejar/ig-client"
keywords = ["finance", "ohlc", "tick", "trading"]
categories = ["finance", "data-structures"]
exclude = [
    "/examples",
    "/tests",
    "/target",
    "/.git",
    "/.github",
    "/.idea",
    "/.vscode",
    "Cargo.lock",
    "/**/.DS_Store",
]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*",
    "tests/**/*",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*",
    "Docker/**/*",
]

[dependencies]
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
criterion = "0.6.0"
sqlx = { version = "0.8.5", features = [ "postgres","macros","chrono","runtime-tokio-native-tls"]}
async-trait = "0.1.88"
regex = "1.11.1"
dotenv = "0.15.0"
lightstreamer-rs = "0.1.3"
once_cell = "1.21"
lazy_static = "1.5.0"
rand = "0.9.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
once_cell = "1.21.3"
mockito = "1.2.0"
tokio-test = "0.4.3"

[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"

[[test]]
name = "integration_tests"
path = "tests/integration/main.rs"

[lib]
name = "ig_client"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"


[workspace]
members = [
    "examples/account",
    "examples/chart",
    "examples/market",
    "examples/orders",
    "examples/trade",
    "examples/transactions",
    "examples/positions",
    "examples/prices",
    "examples/rate_limiter",
]
