[package]
name = "examples_market"
version = "0.1.0"
edition = "2024"

[dependencies]
ig-client = { path = "../../../ig-client" }
lightstreamer-rs = "0.1.3"
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
serde_json = "1.0.140"
chrono = "0.4.41"
